modules/DANKParser.py
# Generated from ./grammar/DANKParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DANKParser ( Parser ):

    grammarFileName = "DANKParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "';'", 
                     "'('", "')'", "<INVALID>", "<INVALID>", "'*'", "'/'", 
                     "'<present>'", "'</present>'", "'<cycle>'", "'</cycle>'", 
                     "'<leave>'", "'<branch condition=\"'", "'</branch>'", 
                     "'<params>'", "'</params>'", "'<delegate name=\"'", 
                     "'</delegate>'" ]

    symbolicNames = [ "<INVALID>", "EQ", "LT", "GT", "LTE", "GTE", "NEQ", 
                      "COMMA", "SEMI", "LPAREN", "RPAREN", "PLUS", "MINUS", 
                      "MULT", "DIV", "PRINT_BEGIN", "PRINT_END", "LOOP_BEGIN", 
                      "LOOP_END", "BREAKPOINT", "CONDITIONAL_BEGIN", "CONDITIONAL_END", 
                      "PARAMS_BEGIN", "PARAMS_END", "FUNCTION_BEGIN", "FUNCTION_END", 
                      "SIGN", "NUMBER", "STRING", "ID", "WS", "COMMENT", 
                      "COND_ID", "COND_NUMBER", "COND_GT", "COND_LT", "COND_GTE", 
                      "COND_LTE", "COND_EQ", "COND_NEQ", "COND_PLUS", "COND_MINUS", 
                      "END_QUOTE_GT_COND", "COND_WS", "FUNCTION_NAME", "END_QUOTE_GT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_print = 2
    RULE_factor = 3
    RULE_term = 4
    RULE_expression = 5
    RULE_loop = 6
    RULE_var_def = 7
    RULE_operand = 8
    RULE_logical_expression = 9
    RULE_conditional = 10
    RULE_breakpoint = 11
    RULE_params = 12
    RULE_params_2 = 13
    RULE_fun_def = 14
    RULE_ids = 15
    RULE_ids_2 = 16
    RULE_fun_call = 17

    ruleNames =  [ "program", "statement", "print", "factor", "term", "expression", 
                   "loop", "var_def", "operand", "logical_expression", "conditional", 
                   "breakpoint", "params", "params_2", "fun_def", "ids", 
                   "ids_2", "fun_call" ]

    EOF = Token.EOF
    EQ=1
    LT=2
    GT=3
    LTE=4
    GTE=5
    NEQ=6
    COMMA=7
    SEMI=8
    LPAREN=9
    RPAREN=10
    PLUS=11
    MINUS=12
    MULT=13
    DIV=14
    PRINT_BEGIN=15
    PRINT_END=16
    LOOP_BEGIN=17
    LOOP_END=18
    BREAKPOINT=19
    CONDITIONAL_BEGIN=20
    CONDITIONAL_END=21
    PARAMS_BEGIN=22
    PARAMS_END=23
    FUNCTION_BEGIN=24
    FUNCTION_END=25
    SIGN=26
    NUMBER=27
    STRING=28
    ID=29
    WS=30
    COMMENT=31
    COND_ID=32
    COND_NUMBER=33
    COND_GT=34
    COND_LT=35
    COND_GTE=36
    COND_LTE=37
    COND_EQ=38
    COND_NEQ=39
    COND_PLUS=40
    COND_MINUS=41
    END_QUOTE_GT_COND=42
    COND_WS=43
    FUNCTION_NAME=44
    END_QUOTE_GT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DANKParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DANKParser.StatementContext)
            else:
                return self.getTypedRuleContext(DANKParser.StatementContext,i)


        def getRuleIndex(self):
            return DANKParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DANKParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 555384832) != 0):
                self.state = 36
                self.statement()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(DANKParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def print_(self):
            return self.getTypedRuleContext(DANKParser.PrintContext,0)


        def fun_def(self):
            return self.getTypedRuleContext(DANKParser.Fun_defContext,0)


        def fun_call(self):
            return self.getTypedRuleContext(DANKParser.Fun_callContext,0)


        def loop(self):
            return self.getTypedRuleContext(DANKParser.LoopContext,0)


        def var_def(self):
            return self.getTypedRuleContext(DANKParser.Var_defContext,0)


        def conditional(self):
            return self.getTypedRuleContext(DANKParser.ConditionalContext,0)


        def breakpoint(self):
            return self.getTypedRuleContext(DANKParser.BreakpointContext,0)


        def getRuleIndex(self):
            return DANKParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DANKParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.print_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.fun_def()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.fun_call()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.var_def()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.conditional()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 50
                self.breakpoint()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT_BEGIN(self):
            return self.getToken(DANKParser.PRINT_BEGIN, 0)

        def PRINT_END(self):
            return self.getToken(DANKParser.PRINT_END, 0)

        def expression(self):
            return self.getTypedRuleContext(DANKParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DANKParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = DANKParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_print)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(DANKParser.PRINT_BEGIN)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3312359315968) != 0):
                self.state = 54
                self.expression()


            self.state = 57
            self.match(DANKParser.PRINT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(DANKParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(DANKParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(DANKParser.RPAREN, 0)

        def operand(self):
            return self.getTypedRuleContext(DANKParser.OperandContext,0)


        def PLUS(self):
            return self.getToken(DANKParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(DANKParser.MINUS, 0)

        def COND_PLUS(self):
            return self.getToken(DANKParser.COND_PLUS, 0)

        def COND_MINUS(self):
            return self.getToken(DANKParser.COND_MINUS, 0)

        def getRuleIndex(self):
            return DANKParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = DANKParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(DANKParser.LPAREN)
                self.state = 60
                self.expression()
                self.state = 61
                self.match(DANKParser.RPAREN)
                pass
            elif token in [11, 12, 27, 28, 29, 32, 33, 40, 41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3298534889472) != 0):
                    self.state = 63
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3298534889472) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 66
                self.operand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DANKParser.FactorContext)
            else:
                return self.getTypedRuleContext(DANKParser.FactorContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(DANKParser.MULT)
            else:
                return self.getToken(DANKParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(DANKParser.DIV)
            else:
                return self.getToken(DANKParser.DIV, i)

        def getRuleIndex(self):
            return DANKParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = DANKParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.factor()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 70
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 71
                self.factor()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DANKParser.TermContext)
            else:
                return self.getTypedRuleContext(DANKParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(DANKParser.PLUS)
            else:
                return self.getToken(DANKParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(DANKParser.MINUS)
            else:
                return self.getToken(DANKParser.MINUS, i)

        def getRuleIndex(self):
            return DANKParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = DANKParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.term()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==12:
                self.state = 78
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 79
                self.term()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP_BEGIN(self):
            return self.getToken(DANKParser.LOOP_BEGIN, 0)

        def LOOP_END(self):
            return self.getToken(DANKParser.LOOP_END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DANKParser.StatementContext)
            else:
                return self.getTypedRuleContext(DANKParser.StatementContext,i)


        def getRuleIndex(self):
            return DANKParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = DANKParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(DANKParser.LOOP_BEGIN)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 555384832) != 0):
                self.state = 86
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(DANKParser.LOOP_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DANKParser.ID, 0)

        def EQ(self):
            return self.getToken(DANKParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(DANKParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DANKParser.RULE_var_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_def" ):
                listener.enterVar_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_def" ):
                listener.exitVar_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_def" ):
                return visitor.visitVar_def(self)
            else:
                return visitor.visitChildren(self)




    def var_def(self):

        localctx = DANKParser.Var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(DANKParser.ID)
            self.state = 95
            self.match(DANKParser.EQ)
            self.state = 96
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DANKParser.STRING, 0)

        def ID(self):
            return self.getToken(DANKParser.ID, 0)

        def NUMBER(self):
            return self.getToken(DANKParser.NUMBER, 0)

        def COND_ID(self):
            return self.getToken(DANKParser.COND_ID, 0)

        def COND_NUMBER(self):
            return self.getToken(DANKParser.COND_NUMBER, 0)

        def getRuleIndex(self):
            return DANKParser.RULE_operand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperand" ):
                listener.enterOperand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperand" ):
                listener.exitOperand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperand" ):
                return visitor.visitOperand(self)
            else:
                return visitor.visitChildren(self)




    def operand(self):

        localctx = DANKParser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 13824425984) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DANKParser.FactorContext)
            else:
                return self.getTypedRuleContext(DANKParser.FactorContext,i)


        def COND_EQ(self):
            return self.getToken(DANKParser.COND_EQ, 0)

        def COND_LT(self):
            return self.getToken(DANKParser.COND_LT, 0)

        def COND_GT(self):
            return self.getToken(DANKParser.COND_GT, 0)

        def COND_LTE(self):
            return self.getToken(DANKParser.COND_LTE, 0)

        def COND_GTE(self):
            return self.getToken(DANKParser.COND_GTE, 0)

        def COND_NEQ(self):
            return self.getToken(DANKParser.COND_NEQ, 0)

        def getRuleIndex(self):
            return DANKParser.RULE_logical_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_expression" ):
                listener.enterLogical_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_expression" ):
                listener.exitLogical_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_expression" ):
                return visitor.visitLogical_expression(self)
            else:
                return visitor.visitChildren(self)




    def logical_expression(self):

        localctx = DANKParser.Logical_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logical_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.factor()
            self.state = 101
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1082331758592) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 102
            self.factor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONDITIONAL_BEGIN(self):
            return self.getToken(DANKParser.CONDITIONAL_BEGIN, 0)

        def logical_expression(self):
            return self.getTypedRuleContext(DANKParser.Logical_expressionContext,0)


        def END_QUOTE_GT_COND(self):
            return self.getToken(DANKParser.END_QUOTE_GT_COND, 0)

        def CONDITIONAL_END(self):
            return self.getToken(DANKParser.CONDITIONAL_END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DANKParser.StatementContext)
            else:
                return self.getTypedRuleContext(DANKParser.StatementContext,i)


        def getRuleIndex(self):
            return DANKParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = DANKParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(DANKParser.CONDITIONAL_BEGIN)
            self.state = 105
            self.logical_expression()
            self.state = 106
            self.match(DANKParser.END_QUOTE_GT_COND)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 555384832) != 0):
                self.state = 107
                self.statement()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(DANKParser.CONDITIONAL_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakpointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAKPOINT(self):
            return self.getToken(DANKParser.BREAKPOINT, 0)

        def getRuleIndex(self):
            return DANKParser.RULE_breakpoint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakpoint" ):
                listener.enterBreakpoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakpoint" ):
                listener.exitBreakpoint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakpoint" ):
                return visitor.visitBreakpoint(self)
            else:
                return visitor.visitChildren(self)




    def breakpoint(self):

        localctx = DANKParser.BreakpointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_breakpoint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(DANKParser.BREAKPOINT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params_2(self):
            return self.getTypedRuleContext(DANKParser.Params_2Context,0)


        def COMMA(self):
            return self.getToken(DANKParser.COMMA, 0)

        def factor(self):
            return self.getTypedRuleContext(DANKParser.FactorContext,0)


        def getRuleIndex(self):
            return DANKParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = DANKParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_params)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.params_2(0)
                self.state = 118
                self.match(DANKParser.COMMA)
                self.state = 119
                self.factor()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.factor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Params_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(DANKParser.FactorContext,0)


        def params_2(self):
            return self.getTypedRuleContext(DANKParser.Params_2Context,0)


        def COMMA(self):
            return self.getToken(DANKParser.COMMA, 0)

        def getRuleIndex(self):
            return DANKParser.RULE_params_2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams_2" ):
                listener.enterParams_2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams_2" ):
                listener.exitParams_2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams_2" ):
                return visitor.visitParams_2(self)
            else:
                return visitor.visitChildren(self)



    def params_2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DANKParser.Params_2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_params_2, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DANKParser.Params_2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_params_2)
                    self.state = 127
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 128
                    self.match(DANKParser.COMMA)
                    self.state = 129
                    self.factor() 
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Fun_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_BEGIN(self):
            return self.getToken(DANKParser.FUNCTION_BEGIN, 0)
